cluster/apps/home/esphome/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: home
spec:
  selector:
    app.kubernetes.io/name: esphome
  ports:
    - protocol: TCP
      port: 6052
